# egui-sgr

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: ansi.rs
examples/: demo.rs  layout_job.rs  streaming.rs
src/: egui_render.rs  lib.rs  model.rs  parser.rs  sgr.rs  theme.rs
src/color_models/: eight_bit.rs  four_bit.rs  mod.rs  twenty_four_bit.rs
tests/: public_api.rs
