[package]
name = "egui_sgr"
version = "0.1.4"
edition = "2024"
description = "A Rust library that converts ASCII/ANSI escape sequence color models into colored text in egui"
license = "MIT"
repository = "https://github.com/AnlangA/egui-sgr"
documentation = "https://docs.rs/egui_sgr"
homepage = "https://github.com/AnlangA/egui-sgr"
authors = ["Anlang <2682525840@qq.com>"]
keywords = ["egui", "ansi", "color", "terminal", "parsing"]
categories = ["gui", "text-processing"]

[dependencies]
egui = "0.33.2"
regex = "1.12.2"

[dev-dependencies]
eframe = "0.33.2"

[[example]]
name = "demo"
path = "examples/demo.rs"
