[package]
name = "egui_sgr"
version = "0.2.2"
edition = "2024"
rust-version = "1.92"
description = "A Rust library that converts ASCII/ANSI escape sequence color models into colored text in egui"
license = "MIT"
repository = "https://github.com/AnlangA/egui-sgr"
documentation = "https://docs.rs/egui_sgr"
homepage = "https://github.com/AnlangA/egui-sgr"
authors = ["Anlang <2682525840@qq.com>"]
keywords = ["egui", "ansi", "color", "terminal", "parsing"]
categories = ["gui", "text-processing"]

[dependencies]
egui = "0.34.3"
vte = "0.15.0"

[features]
default = []
legacy = []

[dev-dependencies]
criterion = "0.8.2"
eframe = "0.34.3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[bench]]
name = "ansi"
harness = false
